# svg2gcode

./: Cargo.toml
cli/src/: main.rs
lib/src/: lib.rs  machine.rs
lib/src/converter/: mod.rs  visit.rs
lib/src/turtle/: dpi.rs  g_code.rs  mod.rs  preprocess.rs
lib/tests/: circular_interpolation.gcode  shapes.gcode  smooth_curves.gcode  smooth_curves_circular_interpolation_release.gcode  square_transformed.gcode  square_transformed_nested.gcode  square_viewport.gcode
src/: actions.rs  app.rs  main.rs  serial.rs
tui/: Cargo.toml
tui/src/: app.rs  converter.rs  events.rs  grbl.rs  main.rs  serial.rs  ui.rs
